Added receipt logic and branded button on cart

--- a/view/frontend/templates/oneclick/buynow.phtml
+++ b/view/frontend/templates/oneclick/buynow.phtml
@@ -36,6 +36,7 @@
         }
     }
 </script>
+<link rel="stylesheet" type="text/css" href="<?php echo $block->getViewFileUrl('Razorpay_Magento::css/magic.css'); ?>">
 
 <script type="text/javascript">
     var Razorpay = {
