Commented devstack mode

--- a/view/frontend/templates/oneclick/magiccart.phtml
+++ b/view/frontend/templates/oneclick/magiccart.phtml
@@ -48,7 +48,7 @@ $cartDataCount = count( $cartData );
         </magic-checkout-btn>
     </div>
     <link rel="stylesheet" type="text/css" href="<?php echo $block->getViewFileUrl('Razorpay_Magento::css/magic.css'); ?>">
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
 
         var Razorpay = {
           "config": {
@@ -58,7 +58,7 @@ $cartDataCount = count( $cartData );
         }; 
 
          var rzpApi = Razorpay.config.api + 'v1/';
-    </script>
+    </script> -->
 
     <script type="text/javascript" src="https://checkout.razorpay.com/v1/magic-checkout.js"></script>
  
