--- a/view/frontend/templates/oneclick/buynow.phtml
+++ b/view/frontend/templates/oneclick/buynow.phtml
@@ -24,18 +24,6 @@
 
 ?>
 <?php if ($isMagicEnabled == 1 && $isBuynowEnabled == 1) :?>
-<script type="text/x-magento-init">
-    {
-        "#product_addtocart_form": {
-            "Razorpay_Magento/js/magic-buy-now": {
-                "submitUrl": "<?php echo $block->getUrl('razorpay/oneclick/placeorder') ?>",
-                "sku": "<?php echo $block->getProduct()->getSku(); ?>",
-                "callbackURL": "<?php echo $block->getUrl('razorpay/oneclick/completeorder') ?>",
-                "key": "<?php echo $rzpKey ?>"
-            }
-        }
-    }
-</script>
 <link rel="stylesheet" type="text/css" href="<?php echo $block->getViewFileUrl('Razorpay_Magento::css/magic.css'); ?>">
 
 <!-- <script type="text/javascript">
@@ -47,13 +35,28 @@
     }; 
 
      var rzpApi = Razorpay.config.api + 'v1/';
-</script> -->
+</script>
 
 <script id="occ-template" type="text/x-occ-template">
     <button type="button" title="<?php echo __('Buy Now') ?>" class="action primary occ" id="product-oneclick-button">
         <span><?php echo __('Buy Now') ?></span>
     </button>
-</script>
+</script> -->
+
+<div style="margin-top:10px;" id="occ-template">
+    <magic-checkout-btn id="product-oneclick-button" class="" page-type="product" border-radius="4px"
+    data-mage-init='{
+ 
+            "Razorpay_Magento/js/magic-buy-now": {
+                "submitUrl": "<?php echo $block->getUrl('razorpay/oneclick/placeorder') ?>",
+                "sku": "<?php echo $block->getProduct()->getSku(); ?>",
+                "callbackURL": "<?php echo $block->getUrl('razorpay/oneclick/completeorder') ?>",
+                "key": "<?php echo $rzpKey ?>"
+            }
+        }'
+    >
+    </magic-checkout-btn>
+</div>
 
 <script type="text/javascript"
     src="https://checkout.razorpay.com/v1/magic-checkout.js">
