--- a/view/frontend/templates/oneclick/magiccart.phtml
+++ b/view/frontend/templates/oneclick/magiccart.phtml
@@ -48,17 +48,17 @@ $cartDataCount = count( $cartData );
         </magic-checkout-btn>
     </div>
     <link rel="stylesheet" type="text/css" href="<?php echo $block->getViewFileUrl('Razorpay_Magento::css/magic.css'); ?>">
-    <!-- <script type="text/javascript">
-
-        var Razorpay = {
-          "config": {
-            "api": "https://api-web-magentobase.ext.dev.razorpay.in/",
-           "frame": "https://api-web-magentobase.ext.dev.razorpay.in/test/checkout.html?branch=master",
-          },
-        }; 
-
-         var rzpApi = Razorpay.config.api + 'v1/';
-    </script> -->
+<!--    <script type="text/javascript">-->
+<!---->
+<!--        var Razorpay = {-->
+<!--          "config": {-->
+<!--            "api": "https://api-web-magentobase.ext.dev.razorpay.in/",-->
+<!--           "frame": "https://api-web-magentobase.ext.dev.razorpay.in/test/checkout.html?branch=master",-->
+<!--          },-->
+<!--        };-->
+<!---->
+<!--         var rzpApi = Razorpay.config.api + 'v1/';-->
+<!--    </script>-->
 
     <script type="text/javascript" src="https://checkout.razorpay.com/v1/magic-checkout.js"></script>
  
