--- a/view/frontend/templates/oneclick/buynow.phtml
+++ b/view/frontend/templates/oneclick/buynow.phtml
@@ -1,32 +1,23 @@
 <?php
 
-    use Magento\Framework\App\Config\ScopeConfigInterface;
+function getObjectManager()
+{
+    return \Magento\Framework\App\ObjectManager::getInstance();
+}
 
-    function getObjectManager()
-    {
-        return \Magento\Framework\App\ObjectManager::getInstance();
-    }
+$objectManager = getObjectManager();
 
-    $objectManager = getObjectManager();
+$configData = $objectManager->get(\Razorpay\Magento\Model\Config::class);
 
-    // Get the store manager
-    $storeManager = $objectManager->get(\Magento\Store\Model\StoreManagerInterface::class);
-    $scopeConfig = $objectManager->get(ScopeConfigInterface::class);
-
-    $code = 'razorpay';
-    $magicActiveField = 'activate_magic';
-    $buynowActiveField = 'activate_magic_buy_now';
-    $keyField = 'key_id';
-
-    $isMagicEnabled = $scopeConfig->getValue('payment/' . $code . '/' . $magicActiveField, \Magento\Store\Model\ScopeInterface::SCOPE_STORE);
-    $isBuynowEnabled = $scopeConfig->getValue('payment/' . $code . '/' . $buynowActiveField, \Magento\Store\Model\ScopeInterface::SCOPE_STORE);
-    $rzpKey = $scopeConfig->getValue('payment/' . $code . '/' . $keyField, \Magento\Store\Model\ScopeInterface::SCOPE_STORE);
+$isMagicEnabled = $configData->getMagicStatus();
+$isBuyNowEnabled = $configData->getMagicBuyNowStatus();
 
 ?>
-<?php if ($isMagicEnabled == 1 && $isBuynowEnabled == 1) :?>
-<link rel="stylesheet" type="text/css" href="<?php echo $block->getViewFileUrl('Razorpay_Magento::css/magic.css'); ?>">
+<?php if ($isMagicEnabled == 1 && $isBuyNowEnabled == 1) : ?>
+    <link rel="stylesheet" type="text/css"
+          href="<?php echo $block->getViewFileUrl('Razorpay_Magento::css/magic.css'); ?>">
 
-<!-- <script type="text/javascript">
+    <!-- <script type="text/javascript">
     var Razorpay = {
       "config": {
         "api": "https://api-web-magentobase.ext.dev.razorpay.in/",
@@ -43,24 +34,21 @@
     </button>
 </script> -->
 
-<div style="margin-top:10px;" id="occ-template">
-    <magic-checkout-btn id="product-oneclick-button" class="" page-type="product" border-radius="4px"
-    data-mage-init='{
+    <div style="margin-top:10px;" id="occ-template">
+        <magic-checkout-btn id="product-oneclick-button" class="" page-type="product" border-radius="4px"
+                            data-mage-init='{
  
             "Razorpay_Magento/js/magic-buy-now": {
-                "submitUrl": "<?php echo $block->getUrl('razorpay/oneclick/placeorder') ?>",
                 "sku": "<?php echo $block->getProduct()->getSku(); ?>",
-                "callbackURL": "<?php echo $block->getUrl('razorpay/oneclick/completeorder') ?>",
-                "key": "<?php echo $rzpKey ?>"
             }
         }'
-    >
-    </magic-checkout-btn>
-</div>
+        >
+        </magic-checkout-btn>
+    </div>
 
-<script type="text/javascript"
-    src="https://checkout.razorpay.com/v1/magic-checkout.js">
-</script>
+    <script type="text/javascript"
+            src="https://checkout.razorpay.com/v1/magic-checkout.js">
+    </script>
 
 <?php endif; ?>
 
