--- a/view/frontend/templates/oneclick/buynow.phtml
+++ b/view/frontend/templates/oneclick/buynow.phtml
@@ -39,7 +39,7 @@ $isBuyNowEnabled = $configData->getMagicBuyNowStatus();
                             data-mage-init='{
  
             "Razorpay_Magento/js/magic-buy-now": {
-                "sku": "<?php echo $block->getProduct()->getSku(); ?>",
+                "sku": "<?php echo $block->getProduct()->getSku(); ?>"
             }
         }'
         >
