Added button changes and image fix

--- a/view/frontend/templates/oneclick/magiccart.phtml
+++ b/view/frontend/templates/oneclick/magiccart.phtml
@@ -12,38 +12,41 @@ $configData = $objectManager->get(\Razorpay\Magento\Model\Config::class);
 $isMagicEnabled = $configData->getMagicStatus();
 
 $cartData = $objectManager->create('Magento\Checkout\Model\Cart')->getQuote()->getAllVisibleItems();
-$cartDataCount = count( $cartData );
+$cartDataCount = count($cartData);
 
 ?>
-<?php if ($isMagicEnabled == 1 && $cartDataCount > 0) :?>
- 
-    <div style="margin-top:10px;" id="cart-occ-div">
-        <magic-checkout-btn id="cart-occ-template" border-radius="4px"
-            data-mage-init='{
-                    "Razorpay_Magento/js/magic-cart":{}
-                }'
-                class="<?= ($block->isDisabled()) ? ' disabled' : '' ?>"
-     
-                <?php if ($block->isDisabled()) :?>
-     
-                    disabled="disabled"
-     
-                <?php endif; ?>>
-        </magic-checkout-btn>
+<?php if ($isMagicEnabled == 1 && $cartDataCount > 0) : ?>
+
+    <div id="cart-occ-div">
+
+        <button type="button"
+
+                id="cart-occ-template"
+
+                data-role="proceed-to-checkout"
+
+                title="<?= $block->escapeHtmlAttr(__('Proceed to Checkout')) ?>"
+
+                data-mage-init='{
+
+                "Razorpay_Magento/js/magic-cart":{}
+            }'
+
+                class="action primary checkout<?= ($block->isDisabled()) ? ' disabled' : '' ?>"
+
+            <?php if ($block->isDisabled()) : ?>
+
+                disabled="disabled"
+
+            <?php endif; ?>>
+
+            <span><?= $block->escapeHtml(__('Proceed to Checkout')) ?></span>
+
+        </button>
     </div>
-    <link rel="stylesheet" type="text/css" href="<?php echo $block->getViewFileUrl('Razorpay_Magento::css/magic.css'); ?>">
-<!--    <script type="text/javascript">-->
-<!---->
-<!--        var Razorpay = {-->
-<!--          "config": {-->
-<!--            "api": "https://api-web-magentobase.ext.dev.razorpay.in/",-->
-<!--           "frame": "https://api-web-magentobase.ext.dev.razorpay.in/test/checkout.html?branch=master",-->
-<!--          },-->
-<!--        };-->
-<!---->
-<!--         var rzpApi = Razorpay.config.api + 'v1/';-->
-<!--    </script>-->
+    <link rel="stylesheet" type="text/css"
+          href="<?php echo $block->getViewFileUrl('Razorpay_Magento::css/magic.css'); ?>">
 
     <script type="text/javascript" src="https://checkout.razorpay.com/v1/magic-checkout.js"></script>
- 
+
 <?php endif; ?>
