--- a/view/frontend/templates/oneclick/buynow.phtml
+++ b/view/frontend/templates/oneclick/buynow.phtml
@@ -17,34 +17,22 @@ $isBuyNowEnabled = $configData->getMagicBuyNowStatus();
     <link rel="stylesheet" type="text/css"
           href="<?php echo $block->getViewFileUrl('Razorpay_Magento::css/magic.css'); ?>">
 
-    <!-- <script type="text/javascript">
-    var Razorpay = {
-      "config": {
-        "api": "https://api-web-magentobase.ext.dev.razorpay.in/",
-       "frame": "https://api-web-magentobase.ext.dev.razorpay.in/test/checkout.html?branch=master",
-      },
-    }; 
-
-     var rzpApi = Razorpay.config.api + 'v1/';
-</script>
-
-<script id="occ-template" type="text/x-occ-template">
-    <button type="button" title="<?php echo __('Buy Now') ?>" class="action primary occ" id="product-oneclick-button">
-        <span><?php echo __('Buy Now') ?></span>
-    </button>
-</script> -->
-
-    <div style="margin-top:10px;" id="occ-template">
-        <magic-checkout-btn id="product-oneclick-button" class="" page-type="product" border-radius="4px"
-                            data-mage-init='{
- 
-            "Razorpay_Magento/js/magic-buy-now": {
+    <script type="text/x-magento-init">
+        {
+            "#product_addtocart_form": {
+                "Razorpay_Magento/js/magic-buy-now": {
                 "sku": "<?php echo $block->getProduct()->getSku(); ?>"
             }
-        }'
-        >
-        </magic-checkout-btn>
-    </div>
+        }
+    }
+    </script>
+
+    <script id="occ-template" type="text/x-occ-template">
+        <button type="button" title="<?php echo __('Buy Now') ?>" class="action primary occ"
+                id="product-oneclick-button">
+            <span><?php echo __('Buy Now') ?></span>
+        </button>
+    </script>
 
     <script type="text/javascript"
             src="https://checkout.razorpay.com/v1/magic-checkout.js">
